<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="button_spotify">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_build">Build it Bigger</string>
    <string name="button_xyz">XYZ Reader</string>
    <string name="button_capstone">Capstone: My Own App</string>



    <string name="app_name_spotify">Spotify Streamer</string>
    <string name="app_name_scores">Football Scores</string>
    <string name="app_name_build_it_bigger">Build It Bigger</string>
    <string name="app_name_library">Library</string>
    <string name="app_name_xyz_reader">XYZ Reader</string>
    <string name="app_name_capstone">Capstone</string>


    <string name="main_title">My Nanodegree Apps!</string>
    <string name="toast_message">This button will launch my %1s app!</string>

</resources>
